Пофиксил кнопку три точки у поста
Был конфликт имен классов modal у boostrap и моим

--- a/web/src/components/modal/ModalContent.css
+++ b/web/src/components/modal/ModalContent.css
@@ -9,8 +9,14 @@
     height: 1px; /* Толщина линии */
     width: 100%;
 }
-.Content {
+.Delete {
     cursor: pointer;
     font-weight:bold;
     color: tomato;
+}
+
+.Report {
+    cursor: pointer;
+    font-weight:bold;
+    color: rgb(202, 158, 65);
 }
