--- a/web/src/components/modal/Modal.css
+++ b/web/src/components/modal/Modal.css
@@ -1,4 +1,4 @@
-.modal {
+.postmodal {
     height:  100%;
     width: 100%;
     background-color: rgba(0,0,0,0.4);
@@ -11,22 +11,22 @@
     opacity: 0;
     pointer-events: none;
     transition: 0.5s;
+    z-index: 1;
 }
 
-.modal.active {
+.postmodal.active {
     opacity: 1;
     pointer-events: all;
 }
 
-.modal_content {
+.postmodal_content {
     padding: 20px;
     border-radius: 12px;
     background-color: white;
     width: 30vw;
-    transform: scale(0.5);
     transition: 0.4s all;
 }
 
-.modal_content.active {
+.postmodal_content.active {
     transform: scale(1);
 }
