--- a/web/src/sass/recomendation.scss
+++ b/web/src/sass/recomendation.scss
@@ -5,5 +5,7 @@
   margin-top: 65px;
   border-radius: 10px;
   max-height: 390px;
-  right: 5em;
+  position: sticky;
+  top: 10%;
+  margin-left: 79px;
 }
