исправил стили кнопок, поправил меню

--- a/web/src/sass/recomendation.scss
+++ b/web/src/sass/recomendation.scss
@@ -6,6 +6,6 @@
   border-radius: 10px;
   max-height: 390px;
   position: sticky;
-  top: 10%;
-  margin-left: 79px;
+  top: 133px;
+  margin-left: 55px;
 }
