--- a/web/src/sass/mobileStyles.scss
+++ b/web/src/sass/mobileStyles.scss
@@ -24,7 +24,7 @@
     left: -34% !important;
   }
   .mobilePostContainer{
-    max-width: 300px;
+    max-width: 23rem;
   }
   .buttonMoreForMobile{
     right: -21px !important;
