--- a/web/src/sass/common.scss
+++ b/web/src/sass/common.scss
@@ -10,6 +10,18 @@
   width: 40%;
 }
 
+@mixin mobile {
+  @media (max-width: 767px) {
+    @content;
+  }
+}
+
+@mixin tablet {
+  @media (min-width: 768px) and (max-width: 1023px) {
+    @content;
+  }
+}
+
 .textLine {
   display: flex;
   &:after {
