--- a/web/src/components/modal/Modal.css
+++ b/web/src/components/modal/Modal.css
@@ -1,37 +1,37 @@
 .postmodal {
-    height:  100%;
-    width: 100%;
-    background-color: rgba(0,0,0,0.4);
-    position: fixed;
-    top: 0;
-    left: 0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    opacity: 0;
-    pointer-events: none;
-    transition: 0.5s;
-    z-index: 1;
+  height: 100%;
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0.4);
+  position: fixed;
+  top: 0;
+  left: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  opacity: 0;
+  pointer-events: none;
+  transition: 0.5s;
+  z-index: 1;
 }
 
 .postmodal.active {
-    opacity: 1;
-    pointer-events: all;
+  opacity: 1;
+  pointer-events: all;
 }
 
 .postmodal_content {
-    padding: 20px;
-    border-radius: 12px;
-    background-color: white;
-    width: 30vw;
-    transition: 0.4s all;
+  padding: 20px;
+  border-radius: 12px;
+  background-color: white;
+  width: 30vw;
+  transition: 0.4s all;
 }
 @media (max-width: 768px) {
-    .postmodal_content {
-        width: 40vw;
-    }
+  .postmodal_content {
+    width: 40vw;
+  }
 }
 
 .postmodal_content.active {
-    transform: scale(1);
+  transform: scale(1);
 }
