--- a/web/src/components/messenger/messag.module.scss
+++ b/web/src/components/messenger/messag.module.scss
@@ -5,7 +5,7 @@
   padding: 0;
   font-size: 15px;
   &::placeholder {
-    color: #9797BD;
+    color: #9797bd;
   }
   &:focus {
     outline: none;
@@ -16,21 +16,30 @@
   justify-content: space-between;
   margin-bottom: 15px;
   margin-right: 17px;
-  background: #9797BD1A;
+  background: #9797bd1a;
   border-radius: 45px;
   padding: 8px 12px 8px 50px;
   height: 45px;
 }
 @media (max-width: 768px) {
-  .mobileBorder{
-    border:none !important;
+  .mobileBorder {
+    border: none !important;
     padding-right: 12px !important;
   }
-  .mobileContact{
-  grid-row: unset !important;
-  display: flex;
+  .mobileContact {
+    grid-row: unset !important;
+    display: flex;
   }
-  .mobileInputSearch{
+  .mobileInputSearch {
     margin-right: 5px;
+  }
+  .mobileButtonBack {
+    width: 35px;
+    height: 35px;
+    margin-left: 9px;
+    position: absolute;
+    top: 0;
+    margin-top: 45px;
+    display: inline !important;
   }
 }
