--- a/web/src/styles/styles.css
+++ b/web/src/styles/styles.css
@@ -7,3 +7,18 @@
   font-family: nexa;
   font-weight: 700;
 }
+
+@keyframes slideInLeft {
+  from {
+    transform: translateX(-100%);
+    opacity: 0;
+  }
+  to {
+    transform: translateX(0);
+    opacity: 1;
+  }
+}
+
+.slideInLeft {
+  animation: slideInLeft 0.3s ease-in-out forwards;
+}
