--- a/web/src/sass/common.scss
+++ b/web/src/sass/common.scss
@@ -55,7 +55,7 @@
   position: relative;
   background: #efefef;
   border-radius: 8px;
-  padding: 8px 12px 8px 40px;
+  padding: 0 10px 0 32px;
   min-width: 250px;
 }
 
