--- a/web/src/components/privacyPolicy/PrivacyPolicy.module.css
+++ b/web/src/components/privacyPolicy/PrivacyPolicy.module.css
@@ -24,6 +24,7 @@
     max-width: 100vw;
     margin: 50px auto;
     background-color: #fff;
+    box-shadow: rgba(0, 0, 0, 0.05) 0px 1px 10px 0px;
   }
 }
 
