--- a/web/src/sass/common.scss
+++ b/web/src/sass/common.scss
@@ -10,6 +10,26 @@
   border-bottom: 1px solid #ebebeb;
 }
 
+.modalAlert {
+  left: 0;
+  width: 100vw;
+  bottom: 80px;
+  display: flex;
+  z-index: 999;
+  position: fixed;
+  animation: 1;
+  justify-content: center;
+  p {
+    width: 200px;
+    padding: 12px;
+    text-align: center;
+    border-radius: 10px;
+    background-color: #dadada;
+    animation: 0.3s 1 alternate slidein;
+    box-shadow: 0px -1px 8px 0px #00000024;
+  }
+}
+
 .loaderWrap {
   width: 100%;
   display: flex;
@@ -29,6 +49,11 @@
   to {
     rotate: 359deg;
   }
+}
+
+// style={{ boxShadow: "rgba(0, 0, 0, 0.05) 0px 1px 10px 0px" }}
+.customBoxShadow {
+  box-shadow: rgba(0, 0, 0, 0.05) 0px 1px 10px 0px;
 }
 
 // .moreWrap {
@@ -265,12 +290,13 @@
   padding: 22px 40px;
   .dark,
   .light {
-    width: 28px;
-    height: 28px;
+    width: 25px;
+    height: 25px;
     display: flex;
     object-fit: contain;
     a,
     svg,
+    img,
     button {
       width: 100%;
       height: 100%;
@@ -308,5 +334,14 @@
 @mixin tablet {
   @media (min-width: 768px) and (max-width: 1023px) {
     @content;
+  }
+}
+
+@keyframes slidein {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
   }
 }
