--- a/web/src/sass/editProfile.scss
+++ b/web/src/sass/editProfile.scss
@@ -3,7 +3,6 @@
   margin-top: 32px;
   background: #fff;
   border-radius: 6px;
-  border: 1px solid #0000001a;
 }
 
 .editProfile {
@@ -117,6 +116,9 @@
     #6cf2fe 96.11%
   );
 }
+.btnSubmit:disabled {
+  background: #d8d8dc;
+}
 .alertWrapper {
   width: 100%;
   position: relative;
@@ -136,6 +138,7 @@
   max-width: 100%;
   border-radius: 0;
   grid-template-columns: 0.3fr 0.7fr;
+  box-shadow: rgba(0, 0, 0, 0.05) 0px 1px 10px 0px;
 }
 
 .active_profile {
