--- a/src/sass/auth.scss
+++ b/src/sass/auth.scss
@@ -238,6 +238,10 @@
   .authLayout {
     background-color: #fff;
   }
+  .btns-mobile {
+    flex-direction: column;
+    align-items: center;
+  }
 }
 
 @media (min-width: 768px) {
