--- a/src/components/messenger/messenger.scss
+++ b/src/components/messenger/messenger.scss
@@ -14,7 +14,7 @@
 .inputSearch {
   display: flex;
   justify-content: space-between;
-  margin-right: 17px;
+  //margin-right: 17px;
   background: #9797bd1a;
   border-radius: 45px;
   padding: 8px 12px 8px 50px;
