--- a/src/components/messenger/messenger.scss
+++ b/src/components/messenger/messenger.scss
@@ -67,7 +67,7 @@
     border-radius: 10px;
     display: inline-block;
     padding: 2px 6px 4px 6px;
-    background-color: #1877f2;
+    background-color: #1dc7ff;
   }
 }
 // chats end
